# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "sys"
version = "0.0.2"
license-file = "LICENSE.txt"
edition = "2021"
authors = ["The Maintainers of Nanvix"]
description = "Low-Level System Library for Nanvix"
homepage = "https://github.com/nanvix"

[lib]
crate-type = ["lib"]
