# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "sys"
version = "1.0.0"
license-file = "LICENSE.txt"
edition = "2021"
authors = ["The Maintainers of Nanvix"]
description = "Low-Level System Library for Nanvix"
homepage = "https://github.com/nanvix"

[lib]
crate-type = ["lib"]

[dependencies]
error = { git = "https://github.com/nanvix/error", branch = "releases/v0.0.1" }
